--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
           
         </div>
-        <button><i class="fa-solid fa-trash" style="color: #ffffff;"></i></i></button>
+        <button><i class="fa-solid fa-trash" style="color: #ffffffe5;"></i></i></button>
       </div>
       </div>
     </div>
